Use URI#toURL for creating URL
Ref Jan on [jetty-users]